--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
 <html lang="en">
+<html>
+
 <head>
-  <meta charset="utf-8">
-  <title>ProyectoRickYMorty</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <title>Disfraces Rick & Morty - Tienda Online</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="Disfraces Rick & Morty - Tienda Online">
+  <meta name="keywords" content="Disfraces, Rick & Morty, Tienda, Online">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+
+<body style="background-color: #141414;">
   <app-root></app-root>
+  <script src="./assets/scripts.js"></script>
 </body>
+
 </html>
